// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Byte byte all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "some binary base64 value (min:512 chars, max:1024 chars, base64 encoded string)",
            "example": "c2FtcGxlMQ==",
            "in": "query",
            "name": "base64string",
            "required": true,
            "schema": {
              "default": "c2FtcGxlMQ==",
              "description": "some binary base64 value (min:512 chars, max:1024 chars, base64 encoded string)",
              "format": "byte",
              "maxLength": 1024,
              "minLength": 512,
              "nullable": true,
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Byte byte simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description. (base64 encoded string)",
            "in": "query",
            "name": "base64string",
            "required": false,
            "schema": {
              "description": "Parameter without description. (base64 encoded string)",
              "format": "byte",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
